# DRF_HW

./: .env.sample  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/fixtures/: auth_data.json  course_data.json  group_data.json  lesson_data.json  materials_data.json  payment_data.json  user_data.json  users_data.json
materials/management/commands/: download_bd.py  upload_payments.py
materials/migrations/: 0001_initial.py  0002_rename_header_lesson_name_alter_lesson_url.py  0003_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_price.py  0007_alter_subscription_course_and_more.py  0008_alter_subscription_course_and_more.py  0009_alter_subscription_course.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_date.py  0004_alter_payment_options.py  0005_alter_payment_payment_method.py  0006_payment_link_payment_session_id_and_more.py
